Mon Nov 22 11:58:11 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_concat): set ENC_CODERANGE_VALID when the
	  receiver is 7BIT and the argument is non ASCII.

Sat Nov 20 01:57:55 2010  Akio Tajima  <artonx@yahoo.co.jp>

	* common.mk: add dependency(insns.inc) to compile.obj

Thu Nov 18 00:02:17 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Upgrading output encoding with ASCII content 
	  as needed.  [ruby-core:33229]

Tue Nov 17 08:54:04 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Upgrading output encoding as needed.  [ruby-core:33135]

Tue Nov 17 08:54:04 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Upgrading output encoding as needed.  [ruby-core:33135]

Tue Nov 16 22:30:39 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_insnhelper.c (vm_throw): remove fear of undefined behavior :-)
	  Coverity Scan found this bug.

Tue Nov 16 06:39:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (PACK_ITEM_ADJUST): return nil not result array and yield
	  values if block is given.  [ruby-core:33193]

Tue Nov 16 00:21:20 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* regparse.c (and_cclass, or_cclass): fix memory leak.  Coverity Scan
	  found this bug.  [ruby-dev:42579]

Mon Nov 15 23:54:45 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval_intern.h (CHECK_STACK_OVERFLOW): it was not intended to add
	  size_t to a pointer typed VALUE*.  Coverity Scan found this defect.

Mon Nov 15 23:41:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (iseq_set_exception_local_table, iseq_set_local_table,
	  rb_iseq_build_from_ary): fix type inconsistency (which is benign
	  because sizeof(ID) == sizeof(ID*), though).  Coverity Scan found
	  these bugs.

Mon Nov 15 22:47:27 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (rb_funcall): ensure va_end after va_init_list.  Coverity
	  Scan found this bug.

Mon Nov 15 06:43:48 2010  Aaron Patterson <aaron@tenderlovemaking.com>
